--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -12,11 +12,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.3",
+    "axios": "^1.4.0",
+    "query-string": "^8.1.0",
     "pinia": "^2.0.32",
+    "quasar": "^2.11.10",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.3.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -27,9 +32,11 @@
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
+    "sass": "1.32.12",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
     "vite-plugin-pwa": "^0.14.7",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.2.0",
+    "workbox-precaching": "^6.5.4"
   }
 }
