--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "cross-env RELOAD_SW=true vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -28,6 +28,7 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "@rollup/plugin-replace": "^5.0.1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
@@ -37,6 +38,7 @@
     "vite": "^4.1.4",
     "vite-plugin-pwa": "^0.14.7",
     "vue-tsc": "^1.2.0",
-    "workbox-precaching": "^6.5.4"
+    "workbox-precaching": "^6.5.4",
+    "cross-env": "^7.0.3"
   }
 }
