--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.3",
-    "axios": "^1.4.0",
-    "query-string": "^8.1.0",
-    "pinia": "^2.0.32",
+    "@quasar/extras": "1.16.3",
+    "axios": "1.4.0",
+    "query-string": "8.1.0",
+    "pinia": "2.0.35",
     "quasar": "^2.11.10",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
