--- a/package.json
+++ b/package.json
@@ -14,21 +14,23 @@
   "dependencies": {
     "@quasar/extras": "1.16.3",
     "axios": "1.4.0",
-    "query-string": "8.1.0",
     "pinia": "2.0.35",
     "quasar": "^2.11.10",
+    "query-string": "8.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.3.1",
+    "@rollup/plugin-replace": "^5.0.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@volar/vue-language-core": "1.6.3",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "@rollup/plugin-replace": "^5.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
@@ -37,8 +39,7 @@
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
     "vite-plugin-pwa": "^0.14.7",
-    "vue-tsc": "^1.2.0",
-    "workbox-precaching": "^6.5.4",
-    "cross-env": "^7.0.3"
+    "vue-tsc": "1.2.1",
+    "workbox-precaching": "^6.5.4"
   }
 }
