--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "quasar": "^2.11.10",
     "query-string": "8.1.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.3.1",
